--- a/packages.config
+++ b/packages.config
@@ -1,17 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DockPanelSuite" version="3.0.6" targetFramework="net462" />
-  <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreTools" version="9.0.2.11" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.7" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.29.0" targetFramework="net462" />
-  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net462" />
-  <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net462" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2019.2.20" targetFramework="net462" />
+  <package id="DockPanelSuite" version="3.1.0" targetFramework="net48" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.1.0" targetFramework="net48" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.52" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.CoreTools" version="9.1.0.159" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.52" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.1.45" targetFramework="net48" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.1.45" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Targets" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2365.46" targetFramework="net48" />
+  <package id="Microsoft.Web.Xdt" version="3.1.0" targetFramework="net48" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2023.6.56" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NuGet.Common" version="6.9.1" targetFramework="net48" />
+  <package id="NuGet.Configuration" version="6.9.1" targetFramework="net48" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net462" />
-  <package id="XrmToolBoxPackage" version="1.2019.2.30" targetFramework="net462" />
+  <package id="NuGet.Frameworks" version="6.9.1" targetFramework="net48" />
+  <package id="NuGet.Packaging" version="6.9.1" targetFramework="net48" />
+  <package id="NuGet.Protocol" version="6.9.1" targetFramework="net48" />
+  <package id="NuGet.Versioning" version="6.9.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="XrmToolBoxPackage" version="1.2023.10.67" targetFramework="net48" />
 </packages>
