Ignoring bin and obj

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
+/bin/*
+/obj/*
 /.vs/DataImport
 /bin/Debug/Connections/ConnectionsList.Default.xml
 /bin/Debug/Connections/MscrmTools.ConnectionsList.xml
