WIP Loading Settings

--- a/DataImport.csproj
+++ b/DataImport.csproj
@@ -244,6 +244,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Importer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="MyPlugin.cs" />
     <Compile Include="MyPluginControl.cs">
       <SubType>UserControl</SubType>
