Including dependencies as packages in it's own folder to avoid third party libraries, adding nuspec and adjusting packages.config to exclude dependencies that should already be included as part of XRMToolbox.

--- a/DataImportSharp.nuspec
+++ b/DataImportSharp.nuspec
@@ -16,7 +16,9 @@
     <tags>XrmToolBox</tags>
   </metadata>
   <files>
+    <file src="bin\Release\DataImportSharp.dll" target="lib\net48\Plugins\" />    
     <file src="README.md" target="" />
     <file src="Resources\DataImportSharpSharp.png" target="Resources\DataImportSharpSharp.png" />
+    <file src="bin\Release\Libraries\*.dll" target="lib\net48\Plugins\DataImportSharp" />
   </files>
 </package>
