--- a/DataImportSharp.nuspec
+++ b/DataImportSharp.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>AndrewHowes.DataImportSharp</id>
-    <version>1.2024.12.23</version>
+    <version>1.2024.9123.26203</version>
     <title>Data Import ++ BETA</title>
     <authors>Joseph Merhej and Andrew Howes</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,6 +14,11 @@
     <releaseNotes>UI Improvements in advance of release</releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>XrmToolBox</tags>
+    <dependencies>
+      <group targetFramework=".NETFramework4.8">
+        <dependency id="XrmToolBoxPackage" version="1.2023.10.67" />
+      </group>
+    </dependencies>
   </metadata>
   <files>
     <file src="bin\Release\DataImportSharp.dll" target="lib\net48\Plugins\" />    
