--- a/DataImportSharp.nuspec
+++ b/DataImportSharp.nuspec
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package >
   <metadata>
-    <id>AndrewHowes.DataImportSharp</id>
+    <id>JosephMerhej.DataImport</id>
     <version>1.2024.9123.26203</version>
-    <title>Data Import ++ BETA</title>
+    <title>DataImport++</title>
     <authors>Joseph Merhej and Andrew Howes</authors>
+    <owners>Joseph Merhej and Andrew Howes</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">GPL-3.0-only</license>
     <readme>README.md</readme>
-    <icon>Resources\DataImportSharpSharp.png</icon>
+    <icon>Resources\DataImport.png</icon>
     <projectUrl>https://github.com/YesWeCandrew/XTBPlugins.DataImport</projectUrl>
-    <description>BETA V2 of Data Import++: Use Excel to create, update, upsert or delete records in CRM now with mapping saving, better logging and faster data entry.</description>
+    <description>Use Excel to create, update, upsert or delete records in Dataverse. Now with better logging, the ability to save and re use data maps, and faster data entry.</description>
     <releaseNotes>UI Improvements in advance of release</releaseNotes>
     <copyright>$copyright$</copyright>
-    <tags>XrmToolBox</tags>
+    <tags>XrmToolBox Plugin DataImport++ Data Import Upsert Create Delete Update Key Excel</tags>
     <dependencies>
       <group targetFramework=".NETFramework4.8">
         <dependency id="XrmToolBoxPackage" version="1.2023.10.67" />
@@ -21,9 +22,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\DataImportSharp.dll" target="lib\net48\Plugins\" />    
+    <file src="bin\Release\DataImport.dll" target="lib\net48\Plugins\" />    
     <file src="README.md" target="" />
-    <file src="Resources\DataImportSharpSharp.png" target="Resources\DataImportSharpSharp.png" />
-    <file src="bin\Release\Libraries\*.dll" target="lib\net48\Plugins\DataImportSharp" />
+    <file src="Resources\DataImport.png" target="Resources\DataImport.png" />
+    <file src="bin\Release\Libraries\*.dll" target="lib\net48\Plugins\DataImport" />
   </files>
 </package>
