--- a/DataImport.nuspec
+++ b/DataImport.nuspec
@@ -10,7 +10,8 @@
     <license type="expression">GPL-3.0-only</license>
     <readme>README.md</readme>
     <icon>Resources\DataImport.png</icon>
-    <projectUrl>https://github.com/YesWeCandrew/XTBPlugins.DataImport</projectUrl>
+    <projectUrl>https://andyhowes.co/introducing-dataimport-v2</projectUrl>
+    <repository type="git" url="https://github.com/JosephMerhej/XTBPlugins.DataImport"/>
     <description>Use Excel to create, update, upsert or delete records in Dataverse. Now with better logging, the ability to save and re use data maps, and faster data entry.</description>
     <releaseNotes>V2 of DataImport++ with a new log table, the ability to save / load data maps, smoother mapping functionality, bug fixes and UI improvements.</releaseNotes>
     <copyright>$copyright$</copyright>
